Fix collection card min size on mobile - Couldn't go past the set px value on smaller screens. - Fix by setting to 100% on mobile, since it already is that at that window width

--- a/frontend/src/assets/variables.css
+++ b/frontend/src/assets/variables.css
@@ -185,6 +185,10 @@
 /* ----------- Specials ----------- */
 :root {
     --title-card-width: 185px;
-    --collection-card-width: 500px;
+    --collection-card-width: 475px;
+
+    @media(max-width: 768px) {
+        --collection-card-width: 100%
+    }
 }
 
